Fixes option sections alignment

--- a/client/modules/Offer/components/OptionDailies/OptionDailies.css
+++ b/client/modules/Offer/components/OptionDailies/OptionDailies.css
@@ -2,5 +2,6 @@
   vertical-align: top;
   display: table-cell;
   padding: 8px;
-  width: 10%;
+  width: 15%;
+  border-right: 1px solid #ccc;
 }
