--- a/client/modules/Offer/components/OptionPrice/OptionPrice.css
+++ b/client/modules/Offer/components/OptionPrice/OptionPrice.css
@@ -2,5 +2,5 @@
   vertical-align: top;
   display: table-cell;
   padding: 8px;
-  width: 10%;
+  width: 20%;
 }
