--- a/client/modules/Offer/components/OptionTitle/OptionTitle.css
+++ b/client/modules/Offer/components/OptionTitle/OptionTitle.css
@@ -2,17 +2,18 @@
   vertical-align: top;
   display: table-cell;
   padding: 8px;
-  width: 60%;
+  width: 40%;
+  border-right: 1px solid #ccc;
 }
 
 .Title {
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 8px;
 }
 
 .Description {
   color: #666;
-  font-size: 1em;
+  font-size: 0.9em;
   font-weight: initial;
 }
 
